--- a/rick-and-morty/src/App.css
+++ b/rick-and-morty/src/App.css
@@ -3,10 +3,12 @@
   margin: 0;
   padding: 0;
 }
-body {
-  background-image: url(https://i.pinimg.com/originals/33/a2/07/33a207715eb8d009767fe0b123f2e198.png);
+.img, body {
+  /* background-image: url(https://i.pinimg.com/originals/33/a2/07/33a207715eb8d009767fe0b123f2e198.png); */
+  /* background-image: url(https://wallpapers.com/images/hd/rick-and-morty-unamused-rick-agpuysmhk3lhdl4p.webp); */
   width: 100%;
   height: 100%;
+
 }
 .nav {
   display: flex;
